RESOLVED FIXED208407
[GTK] WebKit fails to build when Wayland target is disabled
https://bugs.webkit.org/show_bug.cgi?id=208407
Summary [GTK] WebKit fails to build when Wayland target is disabled
Ting-Wei Lan
Reported 2020-02-29 01:07:09 PST
Values in the enum WebCore::PlatformDisplay::Type are only defined when their corresponding platform targets are enabled, so we need #if checks around uses of them. Please add this patch to webkit-2.28 branch if it is accepted.
Attachments
Patch (3.59 KB, patch)
2020-02-29 01:08 PST, Ting-Wei Lan
no flags
Ting-Wei Lan
Comment 1 2020-02-29 01:08:45 PST
EWS Watchlist
Comment 2 2020-02-29 01:09:36 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Commit Bot
Comment 3 2020-03-01 19:20:48 PST
Comment on attachment 392052 [details] Patch Clearing flags on attachment: 392052 Committed r257700: <https://trac.webkit.org/changeset/257700>
WebKit Commit Bot
Comment 4 2020-03-01 19:20:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.