[GTK] Fix the build when Wayland target is disabled https://bugs.webkit.org/show_bug.cgi?id=208407

Patch by Ting-Wei Lan <lantw44@gmail.com> on 2020-03-01
Reviewed by Darin Adler.

Values in the enum WebCore::PlatformDisplay::Type are only defined when
their corresponding platform targets are enabled, so we need #if checks
around uses of them.

* UIProcess/API/glib/WebKitProtocolHandler.cpp:
(WebKit::WebKitProtocolHandler::handleGPU):
* UIProcess/API/glib/WebKitUIClient.cpp:
(UIClient::windowConfigureEventCallback):

Canonical link: https://commits.webkit.org/221362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257700 268f45cc-cd09-0410-ab3c-d52691b4dbfc